# SPIRV-Headers

./: BUILD.bazel  BUILD.gn  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  spirv-headers.pc.in
.github/workflows/: presubmit.yml
.reuse/: dep5
cmake/: SPIRV-Headers.pc.in
example/: CMakeLists.txt
include/spirv/: spir-v.xml
include/spirv/1.0/: spirv.core.grammar.json  spirv.cs  spirv.h  spirv.hpp  spirv.hpp11  spirv.json  spirv.lua  spirv.py
include/spirv/1.1/: spirv.core.grammar.json  spirv.cs  spirv.h  spirv.hpp  spirv.hpp11  spirv.json  spirv.lua  spirv.py
include/spirv/1.2/: spirv.core.grammar.json  spirv.cs  spirv.h  spirv.hpp  spirv.hpp11  spirv.json  spirv.lua  spirv.py  spirv_strings.h  spirv_strings.hpp  spirv_strings.hpp11
include/spirv/1.3/: spirv.core.grammar.json  spirv.h  spirv.hpp  spirv.hpp11  spirv.json  spirv.lua  spirv.py
include/spirv/unified1/: AMD_gcn_shader.h  AMD_shader_ballot.h  AMD_shader_epxlicit_vertex_parameter.h  AMD_shader_explicit_vertex_parameter.h  AMD_shader_trinary_minmax.h  DebugInfo.h  NonSemanticAuxData.h  NonSemanticClspvReflection.h  NonSemanticDebugBreak.h  NonSemanticDebugDescriptor.h  NonSemanticDebugPrintf.h  NonSemanticShaderDebugInfo.h  NonSemanticVkspReflection.h  OpenCLDebugInfo100.h  TOSA.001000.1.h  extinst.debuginfo.grammar.json  extinst.glsl.std.450.grammar.json  extinst.nonsemantic.auxdata.grammar.json  extinst.nonsemantic.clspvreflection.grammar.json  extinst.nonsemantic.debugdescriptor.grammar.json  extinst.nonsemantic.debugprintf.grammar.json  extinst.nonsemantic.shader.debuginfo.100.grammar.json  extinst.nonsemantic.shader.debuginfo.grammar.json  extinst.opencl.debuginfo.100.grammar.json  extinst.opencl.std.100.grammar.json  extinst.spv-amd-gcn-shader.grammar.json  extinst.spv-amd-shader-ballot.grammar.json  extinst.spv-amd-shader-explicit-vertex-parameter.grammar.json  extinst.spv-amd-shader-trinary-minmax.grammar.json  extinst.tosa.001000.1.grammar.json  spirv.bf  spirv.core.grammar.json  spirv.cs  spirv.h  spirv.hpp  spirv.hpp11  spirv.json  spirv.lua  spirv.py  spirv.schema.json  (+1 more)
include/spirv/unified1/org/khronos/spv/: Spv.java
tests/: CMakeLists.txt  example.c  example.cpp  example11.cpp
tests/find_package/: CMakeLists.txt
tests/pkg_config/: CMakeLists.txt
tools/buildHeaders/: header.cpp  header.h  jsonToSpirv.cpp  jsonToSpirv.h  main.cpp
tools/check_grammar/: check_grammar.py
